# mo837-dask

./: README.md  docker-compose.yaml  pyproject.toml
01-quickstart/: benchmark_matmul.ipynb  numpy-alt.ipynb  quickstart.ipynb
01-quickstart/.ipynb_checkpoints/: benchmark_matmul-checkpoint.ipynb  quickstart-checkpoint.ipynb
cluster/: Dockerfile  recipe.py
exploration/: 002-lazy-evaluation.ipynb  003-benchmark.ipynb  myfile.hdf5  overview.ipynb
exploration/.ipynb_checkpoints/: 001-quickstart-checkpoint.ipynb  002-lazy-evaluation-checkpoint.ipynb
src/: app.py
