[tool.poetry]
name = "mo837-dask"
version = "0.1.0"
description = ""
authors = ["delucca <gpg@delucca.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.23.2"
dask = "^2022.9.0"
pandas = "^1.4.4"
blaze = "^0.10.1"
h5py = "^3.7.0"
distributed = "^2022.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
